--- a/sections/custom-recipe.liquid
+++ b/sections/custom-recipe.liquid
@@ -176,28 +176,28 @@
 
           <ul class="underRecipe__swiper-bg-wrap">
             <li class="underRecipe__swiper-bg is-active" data-slide="0">
-              <img src="{{ 'recipe-main1.png' | file_url }}" alt="ブラックコーヒーの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg1.png' | file_url }}" alt="ブラックコーヒーの画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="1">
-              <img src="{{ 'recipe-main2.png' | file_url }}" alt="ブラックコーヒーの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg2.png' | file_url }}" alt="ブラックコーヒーの画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="2">
-              <img src="{{ 'recipe-main3.png' | file_url }}" alt="トニックウォーターの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg3.png' | file_url }}" alt="トニックウォーターの画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="3">
-              <img src="{{ 'recipe-main4.png' | file_url }}" alt="エナジードリンクの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg4.png' | file_url }}" alt="エナジードリンクの画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="4">
-              <img src="{{ 'recipe-main5.png' | file_url }}" alt="さんぴん茶の画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg5.png' | file_url }}" alt="さんぴん茶の画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="5">
-              <img src="{{ 'recipe-main6.png' | file_url }}" alt="牛乳の画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg6.png' | file_url }}" alt="牛乳の画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="6">
-              <img src="{{ 'recipe-main7.png' | file_url }}" alt="飲むヨーグルトの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg7.png' | file_url }}" alt="飲むヨーグルトの画像" width="1400" height="1070">
             </li>
             <li class="underRecipe__swiper-bg" data-slide="7">
-              <img src="{{ 'recipe-main8.png' | file_url }}" alt="グレープフルーツの画像" width="1400" height="1070">
+              <img src="{{ 'recipe-bg8.png' | file_url }}" alt="グレープフルーツの画像" width="1400" height="1070">
             </li>
           </ul>
         </div>
@@ -206,9 +206,8 @@
           <li class="underRecipe__swiper-text" data-slide="0">
             <p>Recipe - Information</p>
             <p>
-              意外と合うシリーズ① ：<br class="for-sp">
               フレーバーコーヒーのような飲みやすさ<br>
-              眠れなくなっての飲み過ぎにはご注意ください！<br>
+              眠れなくなっての飲み過ぎにはご注意ください<br>
               <br>
               HABUSH 30ml(目安：お好みでご調整ください）<br>
               ブラックコーヒーでフルアップ
@@ -218,7 +217,7 @@
             <p>Recipe - Information</p>
             <p>
               飲まなくてもわかる美味しさ<br>
-              ぜひご自宅でお試しください！！！<br>
+              ぜひご自宅でお試しください<br>
               <br>
               HABUSH 30ml(目安：お好みでご調整ください）<br>
               コーラでフルアップ
@@ -257,9 +256,8 @@
           <li class="underRecipe__swiper-text" data-slide="5">
             <p>Recipe - Information</p>
             <p>
-              意外と合うシリーズ② ：<br class="for-sp">
               まろやかさの極み<br>
-              やさしい口あたりがやみつきに？？<br>
+              やさしい口あたりがやみつきに？<br>
               <br>
               HABUSH 30ml(目安：お好みでご調整ください）<br>
               牛乳でフルアップ
@@ -268,9 +266,8 @@
           <li class="underRecipe__swiper-text" data-slide="6">
             <p>Recipe - Information</p>
             <p>
-              意外と合うシリーズ③ ：<br class="for-sp">
               酸味と甘さのバランスが絶妙<br>
-              インスタライブでAwichが発見したHABUSHの新しい一面！<br>
+              インスタライブでAwichが発見したHABUSHの新しい一面<br>
               <br>
               HABUSH 30ml(目安：お好みでご調整ください）<br>
               ヨーグルト飲料でフルアップ
