--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -65,9 +65,14 @@
         </div>
         <div class="info">
           <div class="sp-flex justify-content-center flex">
-            <p class="head en">Price - Info</p>
+            <!-- <p class="head en">Price - Info</p> -->
+            <p class="memo">
+              サトウキビからつくった59度のアルコールに<br class="for-pc"
+              >浸けて抽出し、香り高い13種類（または8種類）<br class="for-pc"
+              >のハーブ酒（泡盛ベース）と合わせたハブ酒。
+            </p>
             <div class="flex-item">
-              <p class="price"><span class="en">¥4,400</span>(税込・送料別途)</p>
+              <p class="price"><span class="en">¥4,400</span>(送料別)</p>
               <p class="detail">
                 内容量 500ml<br>
                 アルコール度数 35度
@@ -79,7 +84,7 @@
               </p>
             </div>
           </div>
-          <p class="purchase_btn modal_btn" data-target="modal-03">購入する →</p>
+          <p class="purchase_btn modal_btn" data-target="modal-03">商品詳細をみる →</p>
         </div>
       </div>
     </div>
@@ -130,7 +135,7 @@
               </p>
             </div>
           </div>
-          <p class="purchase_btn modal_btn" data-target="modal-03">購入する →</p>
+          <p class="purchase_btn modal_btn" data-target="modal-03">商品詳細をみる →</p>
         </div>
       </div>
     </div>
@@ -176,8 +181,8 @@
     </div>
     <div id="story-main" class="story-main">
       <h2 class="copy rellax" data-rellax-speed="1">
-        Energy SHOT<br>
-        <span>f</span>or YOU
+        Energy Shot<br>
+        <span>f</span>or You
       </h2>
       <div class="story-inner justify-content-between wow animate__animated animate__fadeInUp">
         <p class="head en">Okinawa - Japan</p>
