--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,3 +1,42 @@
+<section class="underProducts__fv">
+  {{ product.metafields.custom.top-img | image_url: width: 1400 , height: 980 | image_tag: alt: product.metafields.custom.top-img.alt, loading: "lazy", class: "underProduct_fv_img"}}
+  <!-- <div class="loop-list loop-normal">
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+    <div><img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258"></div>
+  </div> -->
+  <div class="swiper-container">
+    <div class="product-fv-text">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258">
+        </div>
+        <div class="swiper-slide">
+          <img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258">
+        </div>
+        <div class="swiper-slide">
+          <img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258">
+        </div>
+        <div class="swiper-slide">
+          <img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258">
+        </div>
+        <div class="swiper-slide">
+          <img src="{{ 'text_habush.png' | file_url }}" alt="HABUSH" width="258">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section
   id="MainProduct-{{ section.id }}"
   class="section-{{ section.id }}-padding gradient color-{{ section.settings.color_scheme }}"
@@ -15,15 +54,21 @@
 
   {%- style -%}
     .section-{{ section.id }}-padding {
-      padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-      padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+      padding-top: 100px;
+      padding-bottom: 140px;
     }
 
     @media screen and (min-width: 750px) {
       .section-{{ section.id }}-padding {
-        padding-top: {{ section.settings.padding_top }}px;
-        padding-bottom: {{ section.settings.padding_bottom }}px;
+        padding-top: 180px;
+        padding-bottom: 300px;
       }
+    }
+    #MainProduct-{{ section.id }} {
+      background: #272727;
+    }
+    .product__info-container {
+      color: #fff;
     }
   {%- endstyle -%}
 
@@ -80,12 +125,12 @@
             {%- when '@app' -%}
               {% render block %}
             {%- when 'text' -%}
-              <p
+              <!-- <p
                 class="product__text inline-richtext{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}"
                 {{ block.shopify_attributes }}
               >
                 {{- block.settings.text -}}
-              </p>
+              </p> -->
             {%- when 'title' -%}
               <div class="product__title" {{ block.shopify_attributes }}>
                 <h1>{{ product.title | escape }}</h1>
@@ -219,8 +264,8 @@
                 <label class="quantity__label form__label" for="Quantity-{{ section.id }}">
                   {{ 'products.product.quantity.label' | t }}
                   <span class="quantity__rules-cart no-js-hidden{% if cart_qty == 0 %} hidden{% endif %}">
-                    {%- render 'loading-spinner' -%}
-                    <span>({{- 'products.product.quantity.in_cart_html' | t: quantity: cart_qty -}})</span>
+                    <!-- {%- render 'loading-spinner' -%} -->
+                    <!-- <span>({{- 'products.product.quantity.in_cart_html' | t: quantity: cart_qty -}})</span> -->
                   </span>
                 </label>
                 <div class="price-per-item__container">
@@ -401,11 +446,11 @@
                 {{- block.settings.text -}}
               </a>
             {%- when 'share' -%}
-              {% assign share_url = product.selected_variant.url | default: product.url | prepend: request.origin %}
+              <!-- {% assign share_url = product.selected_variant.url | default: product.url | prepend: request.origin %}
               {% render 'share-button',
                 block: block,
                 share_link: share_url
-              %}
+              %} -->
 
             {%- when 'variant_picker' -%}
               {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
