--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -85,11 +85,12 @@
             {% endif %}
           >
             <span>
-              {%- if product.selected_or_first_available_variant.available == false or quantity_rule_soldout -%}
+              購入する&emsp;&RightArrow;
+              <!-- {%- if product.selected_or_first_available_variant.available == false or quantity_rule_soldout -%}
                 {{ 'products.product.sold_out' | t }}
               {%- else -%}
                 {{ 'products.product.add_to_cart' | t }}
-              {%- endif -%}
+              {%- endif -%} -->
             </span>
             {%- render 'loading-spinner' -%}
           </button>
