--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -38,9 +38,9 @@
         </p>
       </a>
     </div>
-    <div class="faq footer-menu-bar-item text-center">
+    <!-- <div class="faq footer-menu-bar-item text-center">
       <p><span class="en color-gray">FAQ</span></p>
-    </div>
+    </div> -->
     <div class="modal_btn pp footer-menu-bar-item text-center" data-target="modal-01">
       <p>プライバシーポリシー<span class="en">PRIVACY POLICY</span></p>
     </div>
@@ -51,7 +51,7 @@
       </p>
     </div>
     <div class="company footer-menu-bar-item text-center">
-      <a href="#info">
+      <a href="{{shop.url}}#info">
         <p><span class="en">COMPANY</span>会社概要</p>
       </a>
     </div>
@@ -307,15 +307,15 @@
     <div class="footer-container d-flex justify-content-between align-items-end">
       <div class="left-content">
         <ul>
-          <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#story-main">BRAND STORY</a></li>
-          <li class="color-gray">PROCESS</li>
-          <li class="color-gray">RECIPE</li>
-          <li><a href="#sns">SNS</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="{{shop.url}}#product">PRODUCT</a></li>
+          <li><a href="{{shop.url}}#story-main">BRAND STORY</a></li>
+          <li><a href="/pages/process">PROCESS</a></li>
+          <li><a href="/pages/recipe">RECIPE</a></li>
+          <li><a href="{{shop.url}}#sns">SNS</a></li>
+          <li><a href="{{shop.url}}#contact">CONTACT</a></li>
         </ul>
         <div class="symbol">
-          <a href="#top">
+          <a href="{{shop.url}}">
             <img src="{{ 'symbol.png' | file_url }}" alt="" width="53">
           </a>
         </div>
