--- a/assets/add.css
+++ b/assets/add.css
@@ -92,6 +92,10 @@ picture {
   display: none !important;
 }
 
+.footer-menu-bar-item p {
+  color: #fff;
+}
+
 /*----------------------------------
     Top Product
 -----------------------------------*/
@@ -1551,6 +1555,7 @@ picture {
   width: 100%;
   height: 100%;
   position: relative;
+  position: relative;
 }
 .underProducts__fv .underProduct_fv_img {
   width: 100%;
@@ -1569,6 +1574,21 @@ picture {
     aspect-ratio: 390/630;
     max-height: 630px;
   }
+}
+.underProducts__fv .swiper-container {
+  margin-top: -50px;
+  opacity: 0.7;
+}
+@media screen and (max-width: 768px) {
+  .underProducts__fv .swiper-container {
+    margin-top: -2.8rem;
+  }
+}
+.underProducts__fv .swiper-wrapper {
+  transition-timing-function: linear;
+}
+.underProducts__fv .swiper-slide {
+  margin-right: 0;
 }
 
 .slider-buttons {
@@ -1879,11 +1899,11 @@ cart-remove-button .icon-remove path {
     商品一覧ページ
 -----------------------------------*/
 .content-for-layout {
-  margin-top: 10rem;
+  margin-top: 0rem;
 }
 @media screen and (max-width: 768px) {
   .content-for-layout {
-    margin-top: 6rem;
+    margin-top: 0rem;
   }
 }
 
