--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -135,7 +135,7 @@
               </p>
             </div>
           </div>
-          <p class="purchase_btn modal_btn" data-target="modal-03">商品詳細をみる →</p>
+          <p class="purchase_btn modal_btn" data-target="modal-04">商品詳細をみる →</p>
         </div>
       </div>
     </div>
@@ -239,12 +239,12 @@
         <div><img src="{{ 'process.svg' | file_url }}" alt="PROCESS" width="339"></div>
         <div><img src="{{ 'process.svg' | file_url }}" alt="PROCESS" width="339"></div>
       </div>
-      <a class="process__img-wrap" href="process.html" id="imageContainer"></a>
-      <a class="process__img-wrap2" href="process.html" id="imageContainer2"></a>
+      <a class="process__img-wrap" href="/pages/process" id="imageContainer"></a>
+      <a class="process__img-wrap2" href="/pages/process" id="imageContainer2"></a>
     </div>
 
     <div class="process__more-wrap">
-      <a class="process__more" href="process.html">
+      <a class="process__more" href="/pages/process">
         <span class="en">MORE</span>
         <img src="{{ 'icon_arrow.png' | file_url }}" alt="矢印のアイコン" width="20" height="20" loading="lazy">
       </a>
@@ -270,7 +270,7 @@
 
     <div class="recipe__swiper recipe__container">
       <div class="swiper-wrapper recipe__container-inner">
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="0" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="0" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main1.png' | file_url }}" alt="コーヒーの画像" width="258">
           </div>
@@ -294,7 +294,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="1" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="1" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main2.png' | file_url }}" alt="コーラの画像" width="258">
           </div>
@@ -312,7 +312,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="2" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="2" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main3.png' | file_url }}" alt="トニックウォーターの画像" width="258">
           </div>
@@ -330,7 +330,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="3" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="3" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main4.png' | file_url }}" alt="エナジードリンクの画像" width="258">
           </div>
@@ -348,7 +348,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="4" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="4" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main5.png' | file_url }}" alt="さんぴん茶の画像" width="258">
           </div>
@@ -372,7 +372,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="5" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="5" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main6.png' | file_url }}" alt="牛乳の画像" width="258">
           </div>
@@ -390,7 +390,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="6" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="6" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main7.png' | file_url }}" alt="飲むヨーグルトの画像" width="258">
           </div>
@@ -408,7 +408,7 @@
             >
           </div>
         </a>
-        <a href="./recipe.html" class="recipe__slide swiper-slide" slide="7" onclick="saveSlideAttribute(this)">
+        <a href="/pages/recipe" class="recipe__slide swiper-slide" slide="7" onclick="saveSlideAttribute(this)">
           <div class="picture">
             <img src="{{ 'recipe-main8.png' | file_url }}" alt="グレープフルーツジュースの画像" width="258">
           </div>
@@ -435,7 +435,7 @@
     -->
 
     <div class="recipe__more">
-      <a class="recipe__more-btn" href="recipe.html">
+      <a class="recipe__more-btn" href/pages"recipe">
         <span class="en">MORE</span>
         <img src="{{ 'icon-arrow-white.png' | file_url }}" alt="矢印のアイコン" width="20" height="20">
       </a>
