--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -283,7 +283,7 @@
         <ul class="d-flex justify-content-center">
           <li class="yes_btn">
             <!-- <a href="https://awichmerch.thebase.in/items/69187993" class="en"> -->
-            <a href="https://awichmerch.thebase.in" class="en">
+            <a href="/products/habush" class="en">
               <picture class="">
                 <source srcset="{{ 'yes_btn.svg' | file_url }}" media="(min-width: 768px)">
                 <img src="{{ 'yes_btn_sp.svg' | file_url }}" alt="Yes">
@@ -303,6 +303,36 @@
     </div>
   </div>
   <!-- /modal-03 -->
+  <!-- modal-04 -->
+  <div id="modal-04" class="c-modal js-modal">
+    <div class="c-modal_bg js-modal-close"></div>
+    <div class="js-can-scroll c-modal_content _lg">
+      <div class="c-modal_content_inner">
+        <img src="{{ 'mark.png' | file_url }}" alt="" class="mark">
+        <h3>あなたは、20歳以上ですか？</h3>
+        <ul class="d-flex justify-content-center">
+          <li class="yes_btn">
+            <!-- <a href="https://awichmerch.thebase.in/items/69187993" class="en"> -->
+            <a href="/products/habush-limited" class="en">
+              <picture class="">
+                <source srcset="{{ 'yes_btn.svg' | file_url }}" media="(min-width: 768px)">
+                <img src="{{ 'yes_btn_sp.svg' | file_url }}" alt="Yes">
+              </picture>
+            </a>
+          </li>
+          <li class="no_btn en">
+            <a href="https://google.com" class="en">
+              <picture class="">
+                <source srcset="{{ 'no_btn.svg' | file_url }}" media="(min-width: 768px)">
+                <img src="{{ 'no_btn_sp.svg' | file_url }}" alt="No">
+              </picture>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- /modal-04 -->
   <div class="footer-main">
     <div class="footer-container d-flex justify-content-between align-items-end">
       <div class="left-content">
