--- a/assets/add.scss
+++ b/assets/add.scss
@@ -1504,6 +1504,8 @@ gap: 20px 40px;
     width: 100%;
     height: 100%;
     position: relative;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ababab;
     .underProduct_fv_img {
         width: 100%;
         height: auto;
@@ -1516,6 +1518,7 @@ gap: 20px 40px;
         margin-top: -5.5rem;
     }
     @include mq(sp) {
+        padding-bottom: 15px;
         .underProduct_fv_img {
             aspect-ratio: 390 / 630;
             max-height: 630px;
@@ -1874,7 +1877,6 @@ cart-remove-button .icon-remove {
 }
 
 .price__container .price__regular {
-    color: #ababab !important; 
     font-size: 2rem;
 }
 
