--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -156,10 +156,10 @@
               {%- endif -%}
                 <div class="product__tax caption rte">
                   {%- if cart.taxes_included -%}
-                    {{ 'products.product.include_taxes' | t }}
+                    ({{ 'products.product.include_taxes' | t }})
                   {%- endif -%}
                   {%- if shop.shipping_policy.body != blank -%}
-                    {{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }}
+                    ({{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }})
                   {%- endif -%}
                 </div>
               <div {{ block.shopify_attributes }}>
