--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,3 +1,17 @@
+{% style %}
+  .content-for-layout {
+    margin-top: 0;
+  }
+  #price-{{ section.id }} {
+    display: flex;
+    align-items: center;
+    column-gap: 6px; 
+  }
+  #price-{{ section.id }} .product-tax-in {
+    font-size: 14px;
+  }
+{% endstyle %}
+
 <section class="underProducts__fv">
   {{ product.metafields.custom.top-img | image_url: width: 1400 , height: 980 | image_tag: alt: product.metafields.custom.top-img.alt, loading: "lazy", class: "underProduct_fv_img"}}
   <!-- <div class="loop-list loop-normal">
@@ -141,27 +155,32 @@
                 </a>
               </div>
             {%- when 'price' -%}
-              <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
-                {%- render 'price',
-                  product: product,
-                  use_variant: true,
-                  show_badges: true,
-                  price_class: 'price--large'
-                -%}
-              </div>
-              {%- if product.quantity_price_breaks_configured? -%}
-                <div class="volume-pricing-note" id="Volume-Note-{{ section.id }}">
-                  <span>{{ 'products.product.volume_pricing.note' | t }}</span>
-                </div>
-              {%- endif -%}
-                <div class="product__tax caption rte">
+
+                <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
+                  {%- render 'price',
+                    product: product,
+                    use_variant: true,
+                    show_badges: true,
+                    price_class: 'price--large'
+                  -%}
                   {%- if cart.taxes_included -%}
-                    ({{ 'products.product.include_taxes' | t }})
-                  {%- endif -%}
-                  {%- if shop.shipping_policy.body != blank -%}
-                    ({{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }})
+                  <span class="product-tax-in">({{ 'products.product.include_taxes' | t }})</span>
                   {%- endif -%}
                 </div>
+                <!-- {%- if product.quantity_price_breaks_configured? -%}
+                  <div class="volume-pricing-note" id="Volume-Note-{{ section.id }}">
+                    <span>{{ 'products.product.volume_pricing.note' | t }}</span>
+                  </div>
+                {%- endif -%}
+                  <div class="product__tax caption rte">
+                    {%- if cart.taxes_included -%}
+                      ({{ 'products.product.include_taxes' | t }})
+                    {%- endif -%}
+                    {%- if shop.shipping_policy.body != blank -%}
+                      ({{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }})
+                    {%- endif -%}
+                  </div> -->
+              
               <div {{ block.shopify_attributes }}>
                 {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
                 {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
