--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -345,7 +345,7 @@
           <li><a href="{{shop.url}}#contact">CONTACT</a></li>
         </ul>
         <div class="symbol">
-          <a href="{{shop.url}}">
+          <a href="/">
             <img src="{{ 'symbol.png' | file_url }}" alt="" width="53">
           </a>
         </div>
