--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -5,7 +5,7 @@
 </div>
 <header class="">
   <div class="header-container d-flex">
-    <a href="{{ shop.url }}" class="symbol animate__animated animate__fadeIn animate__delay-1s">
+    <a href="/" class="symbol animate__animated animate__fadeIn animate__delay-1s">
       <picture>
         <source srcset="{{ 'symbol.webp' | file_url }}" type="image/webp">
         <img src="{{ 'symbol.png' | file_url }}?1" alt="" width="70">
