--- a/assets/add.scss
+++ b/assets/add.scss
@@ -744,6 +744,7 @@ gap: 20px 40px;
 }
 
 #js-mouse__topRecipe {
+    position: absolute;
     width: 0;
     height: 0;
     top: -60px; 
@@ -763,7 +764,6 @@ gap: 20px 40px;
         height: 0;
         overflow: hidden;
         background-color:rgba(#fff, .2);
-        //filter: blur(5px);
         transition: all  0.3s ease;
     }
 }
@@ -773,7 +773,7 @@ gap: 20px 40px;
     width: 120px;
     height: 120px;
     transform: translate(0,0);
-    z-index: 9999;
+    z-index: 9999999;
     display: flex;
     justify-content: center;
     align-items: center;
