--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -435,7 +435,7 @@
     -->
 
     <div class="recipe__more">
-      <a class="recipe__more-btn" href/pages"recipe">
+      <a class="recipe__more-btn" href="/pages/recipe">
         <span class="en">MORE</span>
         <img src="{{ 'icon-arrow-white.png' | file_url }}" alt="矢印のアイコン" width="20" height="20">
       </a>
@@ -538,10 +538,6 @@
   {% endcomment %}
 </main>
 
-<div id="js-mouse__topProcess">VIEW</div>
-<div id="js-mouse__topRecipe">DRAG</div>
-
-<div class="follow_btn modal_btn" data-target="modal-03"></div>
 {% schema %}
 {
   "name": "トップデザイン",
