--- a/assets/add.scss
+++ b/assets/add.scss
@@ -53,7 +53,7 @@ header .sns-icons {
         margin-top: 35vh;
     }    
 }
-.header-container .symbol {
+.symbol {
     position: fixed;
     z-index: 100;
     top: 50px;
@@ -64,6 +64,8 @@ header .sns-icons {
         left: 20px;
     }
 }
+
+
 .follow_btn {
     background-image:url(../images/cta-new.png);
 }
@@ -793,6 +795,7 @@ gap: 20px 40px;
     left: -60px;
     overflow: hidden;
     border-radius: 50%;
+    position: absolute;
     &::after {
         content: '';
         position: absolute;
@@ -815,7 +818,7 @@ gap: 20px 40px;
     position: fixed;
     width: 120px;
     height: 120px;
-    transform: translate(0,0);
+    //transform: translate(0,0);
     z-index: 9999;
     display: flex;
     justify-content: center;
@@ -1252,6 +1255,21 @@ gap: 20px 40px;
         width: 40%;
         height: auto;
         aspect-ratio: 555 / 832;
+        animation-name: fade-picture;
+        animation-fill-mode: forwards;
+        animation-duration: 1s;
+        animation-delay: 2s;
+        animation-timing-function: ease;
+        opacity: 0;
+        @keyframes fade-picture {
+            0% {
+                opacity: 0;
+            }
+            
+            100% {
+                opacity: 1;
+            }
+        }
         img {
             width: 100%;
             height: 100%;
@@ -1262,6 +1280,14 @@ gap: 20px 40px;
             max-width: 400px;
             height: auto;
             aspect-ratio: 290 / 440;
+        }
+        &.parallax {
+            transform: translate(-50%, -50%);
+            transition: transform 0.3s ease-out;
+        }
+        &.parallax img {
+            width: 100%;
+            height: auto;
         }
     }
     .swiper-button-prev {
@@ -1316,7 +1342,6 @@ gap: 20px 40px;
             }
         }
     }
-
 }
 
 .underRecipe__swiper-prev-wrap {
