--- a/assets/base.css
+++ b/assets/base.css
@@ -2337,9 +2337,9 @@ product-info .loading__spinner:not(.hidden) ~ *,
 }
 
 /* section-header */
-.section-header.shopify-section-group-header-group {
+/* .section-header.shopify-section-group-header-group {
   z-index: 3;
-}
+} */
 
 .shopify-section-header-sticky {
   position: sticky;
@@ -2358,13 +2358,13 @@ product-info .loading__spinner:not(.hidden) ~ *,
   transition: top 0.15s ease-out;
 }
 
-.shopify-section-group-header-group {
+/* .shopify-section-group-header-group {
   z-index: 4;
 }
 
 .section-header ~ .shopify-section-group-header-group {
   z-index: initial;
-}
+} */
 
 /* Main Header Layout */
 .header-wrapper {
