--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -65,6 +65,16 @@
         <img src="{{ 'menu.svg' | file_url }}" alt="MENU" width="48">
       </span>
       <nav class="g-nav">
+        {% if template == 'index' %}
+        <ul>
+          <li><a href="#product">PRODUCT</a></li>
+          <li><a href="#story-main">BRAND STORY</a></li>
+          <li><a href="/pages/process">PROCESS</a></li>
+          <li><a href="/pages/recipe">RECIPE</a></li>
+          <li><a href="#sns">SNS</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+        {% else %}
         <ul>
           <li><a href="{{ shop.url }}#product">PRODUCT</a></li>
           <li><a href="{{ shop.url }}#story-main">BRAND STORY</a></li>
@@ -73,6 +83,7 @@
           <li><a href="{{ shop.url }}#sns">SNS</a></li>
           <li><a href="{{ shop.url }}#contact">CONTACT</a></li>
         </ul>
+        {% endif %}
       </nav>
     </div>
   </div>
