--- a/assets/add.scss
+++ b/assets/add.scss
@@ -53,7 +53,7 @@ header .sns-icons {
         margin-top: 35vh;
     }    
 }
-.symbol {
+.header-container .symbol {
     position: fixed;
     z-index: 100;
     top: 50px;
